<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.games.apps.drpuerk.piedrapapeltijerasplus.Ajustes"
    android:background="@drawable/fondoverticalturquesa">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtAjustes"
            android:id="@+id/tvAjustes"
            android:contentDescription="@string/txtTitAjustes"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/morado"
            android:layout_weight="1" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvIdioma"
            android:id="@+id/tvIdioma"
            android:contentDescription=""
            android:layout_weight="1"
            android:textColor="@color/morado"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSpain"
                android:src="@drawable/esp"
                android:onClick="pulsaSpain"
                android:contentDescription="@string/btnSpain"
                android:background="#00ffffff"
                android:layout_weight="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnEngland"
                android:src="@drawable/uk"
                android:onClick="pulsaEngland"
                android:contentDescription="@string/btnUK"
                android:background="#00ffffff"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvModificarPerfil"
            android:id="@+id/tvModificarPerfil"
            android:textColor="@color/morado"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPerfil"
            android:src="@drawable/registro"
            android:onClick="pulsaPerfil"
            android:contentDescription="@string/btnRegistro"
            android:background="#00ffffff"
            android:layout_weight="0.5"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text=""
            android:id="@+id/btnVolver"
            android:drawableLeft="@drawable/volver64black"
            android:contentDescription="@string/Volver"
            android:onClick="pulsaVolver"
            android:padding="10dp"
            android:background="#00ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
