<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.games.apps.drpuerk.piedrapapeltijerasplus.SubMenuBigBang"
    android:background="@drawable/fondoverticalturquesa">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvModo5opt"
            android:id="@+id/tvTitulo5optA"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/morado"
            android:layout_weight="1"  />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvElije"
            android:id="@+id/tvElije5opt"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/morado"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="9">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.5">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnPiedra5opt"
                        android:src="@drawable/piedram"
                        android:onClick="pulsaPiedra"
                        android:contentDescription="@string/btnPiedra"
                        android:background="#00ffffff"
                        android:layout_gravity="center"
                        android:layout_weight="0.8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/strPiedra"
                        android:id="@+id/tvPiedra5"
                        android:textColor="@color/morado"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.2"/>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.5">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSpock5opt"
                        android:src="@drawable/spockm"
                        android:onClick="pulsaSpock"
                        android:contentDescription="@string/btnSpock"
                        android:background="#00ffffff"
                        android:layout_gravity="center"
                        android:layout_weight="0.8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/strSpock"
                        android:id="@+id/tvSpock"
                        android:textColor="@color/morado"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.2"   />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnLagarto5opt"
                        android:src="@drawable/serpientem"
                        android:onClick="pulsaLagarto"
                        android:contentDescription="@string/btnLagarto"
                        android:background="#00ffffff"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/strLagarto"
                        android:id="@+id/tvLagarto"
                        android:textColor="@color/morado"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.2"   />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.5">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnPapel5opt"
                        android:src="@drawable/papelm"
                        android:onClick="pulsaPapel"
                        android:contentDescription="@string/btnPapel"
                        android:background="#00ffffff"
                        android:layout_gravity="center"
                        android:layout_weight="0.8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/strPapel"
                        android:id="@+id/tvPapel5"
                        android:textColor="@color/morado"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.2"   />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnTijeras5opt"
                        android:src="@drawable/tijerasm"
                        android:onClick="pulsaTijeras"
                        android:contentDescription="@string/btnTijeras"
                        android:background="#00ffffff"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strTijeras"
                        android:textColor="@color/morado"
                        android:id="@+id/tvTijeras5"
                        android:layout_weight="0.2"/>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="0.2" />
    </LinearLayout>

</RelativeLayout>
